--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,11 +87,10 @@
     "    ratings = pd.read_csv(ratings_data, low_memory=False)\n",
     "\n",
     "    \n",
-    "#         wiki_movies_raw = json.load(file)\n",
+    "\n",
     "    # Open and read the Wikipedia data JSON file.\n",
-    "#     with open(wiki_data, mode='r') as file:\n",
-    "#         wiki_movies_raw = json.load(file)\n",
-    "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
+    "    #with open(f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/wikipedia-movies.json', mode='r') as file:\n",
+    "    with open(wiki_data, mode='r') as file:   \n",
     "        wiki_movies_raw = json.load(file)\n",
     "    \n",
     "    # Write a list comprehension to filter out TV shows.\n",
@@ -267,7 +266,7 @@
     "    movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left') \n",
     "    movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\n",
     "    \n",
-    "    # create movie database \n",
+    "\n",
     "    db_string = f\"postgresql://postgres:{db_password}@localhost:5433/movie_data\"\n",
     "    engine = create_engine(db_string)\n",
     "    \n",
@@ -281,7 +280,7 @@
     "    start_time = time.time()\n",
     "    for data in pd.read_csv(f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/ratings.csv', chunksize=1000000):\n",
     "        print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
-    "        data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "        movie_data.to_sql(name='ratings', con=engine, if_exists='append')\n",
     "        rows_imported += len(data)\n",
     "\n",
     "        # add elapsed time to final print out\n",
@@ -290,52 +289,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 10. Create the path to your file directory and variables for the three files.\n",
     "file_dir = '/Users/csingh/Desktop/BootCampFile/Movies_ETL1'\n",
     "# Wikipedia data\n",
-    "wiki_file = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/wikipedia_movies.json'\n",
+    "wiki_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/wikipedia-movies.json'\n",
     "# Kaggle metadata\n",
-    "kaggle_file = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/movies_metadata.csv'\n",
+    "kaggle_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/movies_metadata.csv'\n",
     "# MovieLens rating data.\n",
-    "ratings_file = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/ratings.csv'"
+    "ratings_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/ratings.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/ratings.csv'"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratings_file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/csingh/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/ipykernel_launcher.py:2: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  \n",
-      "/Users/csingh/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/ipykernel_launcher.py:100: FutureWarning: The default value of regex will change from True to False in a future version.\n"
+      "/Users/csingh/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/ipykernel_launcher.py:1: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/Users/csingh/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/ipykernel_launcher.py:99: FutureWarning: The default value of regex will change from True to False in a future version.\n"
      ]
     },
     {
@@ -365,8 +344,8 @@
       "\u001b[0;31mOperationalError\u001b[0m: connection to server at \"localhost\" (::1), port 5433 failed: Connection refused\n\tIs the server running on that host and accepting TCP/IP connections?\nconnection to server at \"localhost\" (127.0.0.1), port 5433 failed: Connection refused\n\tIs the server running on that host and accepting TCP/IP connections?\n",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/1v/mrkwq9091vn42cykrwmjn2xr0000gp/T/ipykernel_78611/497774018.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Refactor code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mextract_transform_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwiki_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mratings_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/1v/mrkwq9091vn42cykrwmjn2xr0000gp/T/ipykernel_78611/3930043088.py\u001b[0m in \u001b[0;36mextract_transform_load\u001b[0;34m(wiki_data, kaggle_data, ratings_data)\u001b[0m\n\u001b[1;32m    192\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    193\u001b[0m     \u001b[0;31m# load movie data into database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 194\u001b[0;31m     \u001b[0mmovies_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_sql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'movies'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mif_exists\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'replace'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    195\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    196\u001b[0m     \u001b[0;31m# load ratings data into database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/1v/mrkwq9091vn42cykrwmjn2xr0000gp/T/ipykernel_9065/2274599609.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mextract_transform_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwiki_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkaggle_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mratings_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/1v/mrkwq9091vn42cykrwmjn2xr0000gp/T/ipykernel_9065/3637502804.py\u001b[0m in \u001b[0;36mextract_transform_load\u001b[0;34m(wiki_data, kaggle_data, ratings_data)\u001b[0m\n\u001b[1;32m    210\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m     \u001b[0;31m# load movie data into database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 212\u001b[0;31m     \u001b[0mmovies_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_sql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'movies'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mif_exists\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'replace'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    213\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m     \u001b[0;31m# load ratings data into database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mto_sql\u001b[0;34m(self, name, con, schema, if_exists, index, index_label, chunksize, dtype, method)\u001b[0m\n\u001b[1;32m   2880\u001b[0m             \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mchunksize\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2881\u001b[0m             \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2882\u001b[0;31m             \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2883\u001b[0m         )\n\u001b[1;32m   2884\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mto_sql\u001b[0;34m(frame, name, con, schema, if_exists, index, index_label, chunksize, dtype, method, engine, **engine_kwargs)\u001b[0m\n\u001b[1;32m    726\u001b[0m         \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    727\u001b[0m         \u001b[0mengine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 728\u001b[0;31m         \u001b[0;34m**\u001b[0m\u001b[0mengine_kwargs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    729\u001b[0m     )\n\u001b[1;32m    730\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/pandas/io/sql.py\u001b[0m in \u001b[0;36mto_sql\u001b[0;34m(self, frame, name, if_exists, index, index_label, schema, chunksize, dtype, method, engine, **engine_kwargs)\u001b[0m\n\u001b[1;32m   1756\u001b[0m             \u001b[0mindex_label\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindex_label\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1757\u001b[0m             \u001b[0mschema\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mschema\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1758\u001b[0;31m             \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1759\u001b[0m         )\n\u001b[1;32m   1760\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -406,16 +385,8 @@
     }
    ],
    "source": [
-    "#Refactor code\n",
-    "extract_transform_load(wiki_file, kaggle_file, ratings_file)"
+    "extract_transform_load(wiki_data, kaggle_data, ratings_data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
