--- a/ETL_clean_kaggle_data.ipynb
+++ b/ETL_clean_kaggle_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
     "from sqlalchemy import create_engine\n",
     "import psycopg2\n",
     "\n",
-    "# from config import db_password\n",
+    "from config import db_password\n",
     "\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,23 +270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 10. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = '/Users/csingh/Desktop/BootCampFile/Movies-ETL'\n",
+    "file_dir = '/Users/csingh/Desktop/BootCampFile/Movies_ETL1'\n",
     "# Wikipedia data\n",
-    "wiki_file = f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/wikipedia_movies.json'\n",
+    "wiki_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/wikipedia_movies.json'\n",
     "# Kaggle metadata\n",
-    "kaggle_file = f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/movies_metadata.csv'\n",
+    "kaggle_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/movies_metadata.csv'\n",
     "# MovieLens rating data.\n",
-    "ratings_file = f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/ratings.csv'"
+    "ratings_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/ratings.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,24 +301,24 @@
    ],
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file)"
+    "wiki_data, kaggle_data, ratings_data = extract_transform_load(wiki_data, kaggle_data, ratings_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 12. Set the DataFrames from the return statement equal to the file names in Step 11. \n",
-    "wiki_movies_df = wiki_file\n",
-    "movies_with_ratings_df = kaggle_file\n",
-    "movies_df = ratings_file"
+    "wiki_movies_df = wiki_data\n",
+    "movies_with_ratings_df = kaggle_data\n",
+    "movies_df = ratings_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1041,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,6 +1050,13 @@
     "# 15. Check the movies_df DataFrame. \n",
     "movies_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
