--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
     "from sqlalchemy import create_engine\n",
     "import psycopg2\n",
     "\n",
-    "#from config import db_password\n",
+    "from config import db_password\n",
     "\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,23 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 17. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = '/Users/csingh/Desktop/BootCampFile/Movies-ETL'\n",
+    "file_dir = '/Users/csingh/Desktop/BootCampFile/Movies_ETL1'\n",
     "# Wikipedia data\n",
-    "wiki_file = f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/wikipedia_movies.json'\n",
+    "wiki_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/wikipedia_movies.json'\n",
     "# Kaggle metadata\n",
-    "kaggle_file = f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/movies_metadata.csv'\n",
+    "kaggle_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/movies_metadata.csv'\n",
     "# MovieLens rating data.\n",
-    "ratings_file = f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/ratings.csv'\n"
+    "ratings_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/ratings.csv'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -244,22 +244,22 @@
    ],
    "source": [
     "# 18. Set the three variables equal to the function created in D1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file)"
+    "wiki_data, kaggle_data, ratings_data = extract_transform_load(wiki_data, kaggle_data, ratings_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 19. Set the wiki_movies_df equal to the wiki_file variable. \n",
-    "wiki_movies_df = wiki_file"
+    "wiki_movies_df = wiki_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        " 'running_time']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,20 +551,6 @@
     "# 21. Check that wiki_movies_df DataFrame columns are correct. \n",
     "wiki_movies_df.columns.to_list()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
