--- a/ETL_function_test.ipynb
+++ b/ETL_function_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,12 @@
     "    # 2. Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    #kaggle_metadata = pd.read_csv(f'{/Users/csingh/Desktop/BootCampFile/Movies-ETL'}movies_metadata.csv')\n",
     "    #ratings = pd.read_csv(f'{file_dir}ratings.csv')\n",
-    "    kaggle_metadata = pd.read_csv(f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/movies_metadata.csv', low_memory=False)\n",
-    "    ratings = pd.read_csv(f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/ratings.csv')\n",
+    "    kaggle_metadata = pd.read_csv(f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/movies_metadata.csv', low_memory=False)\n",
+    "    ratings = pd.read_csv(f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/ratings.csv')\n",
     "    \n",
     "\n",
-    "\n",
-    "# 3. Open the read the Wikipedia data JSON file.\n",
-    "    with open(f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/wikipedia-movies.json', mode='r') as file:\n",
+    "#3.Open the read the Wikipedia data JSON file.\n",
+    "    with open(f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/wikipedia-movies.json', mode='r') as file:\n",
     "        wiki_movies_raw = json.load(file)\n",
     "# 4. Read in the raw wiki movie data as a Pandas DataFrame.\n",
     "        wiki_movies_df = pd.DataFrame(wiki_movies_raw)\n",
@@ -46,54 +45,33 @@
     "    return wiki_movies_df, kaggle_metadata, ratings\n",
     "\n",
     "# 6 Create the path to your file directory and variables for the three files. \n",
-    "file_dir = '/Users/csingh/Desktop/BootCampFile/Movies-ETL'\n",
+    "file_dir = '/Users/csingh/Desktop/BootCampFile/Movies_ETL1'\n",
     "# Wikipedia data\n",
-    "wiki_file = f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/wikipedia_movies.json'\n",
+    "wiki_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/wikipedia-movies.json'\n",
     "# Kaggle metadata\n",
-    "kaggle_file = f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/movies_metadata.csv'\n",
+    "kaggle_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/movies_metadata.csv'\n",
     "# MovieLens rating data.\n",
-    "ratings_file = f'/Users/csingh/Desktop/BootCampFile/Movies-ETL/ratings.csv'\n",
+    "ratings_data = f'/Users/csingh/Desktop/BootCampFile/Movies_ETL1/ratings.csv'\n",
     "\n",
     "# 7. Set the three variables in Step 6 equal to the function created in Step 1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
+    "wiki_data, kaggle_data, ratings_data = extract_transform_load()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7311"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Check how many records were pulled in\n",
-    "len(wiki_movies_raw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 8. Set the DataFrames from the return statement equal to the file names in Step 6. \n",
-    "wiki_movies_df = wiki_file\n",
-    "kaggle_metadata = kaggle_file\n",
-    "ratings = ratings_file"
+    "wiki_movies_df = wiki_data\n",
+    "kaggle_metadata = kaggle_data\n",
+    "ratings = ratings_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +304,7 @@
        "[5 rows x 193 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +549,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +640,7 @@
        "4       1     1246     5.0  1425941556"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,13 +649,6 @@
     "# 11. Check the ratings DataFrame.\n",
     "ratings.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
